Update to v1.9.0