@@ -1,34 +1,33 @@
 package com.luneruniverse.minecraft.mod.nbteditor.commands;
 
-import static net.fabricmc.fabric.api.client.command.v2.ClientCommandManager.literal;
-
-import java.util.Arrays;
 import java.util.List;
 
 import com.luneruniverse.minecraft.mod.nbteditor.containers.ContainerIO;
+import com.luneruniverse.minecraft.mod.nbteditor.multiversion.TextInst;
+import com.luneruniverse.minecraft.mod.nbteditor.multiversion.commands.FabricClientCommandSource;
 import com.luneruniverse.minecraft.mod.nbteditor.screens.ItemsScreen;
 import com.luneruniverse.minecraft.mod.nbteditor.util.MainUtil;
 import com.mojang.brigadier.Command;
-import com.mojang.brigadier.CommandDispatcher;
-import com.mojang.brigadier.tree.LiteralCommandNode;
+import com.mojang.brigadier.builder.LiteralArgumentBuilder;
 
-import net.fabricmc.fabric.api.client.command.v2.FabricClientCommandSource;
-import net.minecraft.command.CommandRegistryAccess;
-import net.minecraft.text.Text;
-
-public class ItemsCommand implements ClientCommand {
+public class ItemsCommand extends ClientCommand {
 	
 	@Override
-	public LiteralCommandNode<FabricClientCommandSource> register(CommandDispatcher<FabricClientCommandSource> dispatcher, CommandRegistryAccess cmdReg) {
-		return dispatcher.register(literal("items").executes(context -> {
-			ItemsScreen.show(MainUtil.getHeldItem(ContainerIO::isContainer, Text.translatable("nbteditor.nocontainer")));
-			return Command.SINGLE_SUCCESS;
-		}));
+	public String getName() {
+		return "items";
 	}
 	
 	@Override
 	public List<String> getAliases() {
-		return Arrays.asList("open");
+		return List.of("open");
+	}
+	
+	@Override
+	public void register(LiteralArgumentBuilder<FabricClientCommandSource> builder) {
+		builder.executes(context -> {
+			ItemsScreen.show(MainUtil.getHeldItem(ContainerIO::isContainer, TextInst.translatable("nbteditor.no_hand.no_item.container")));
+			return Command.SINGLE_SUCCESS;
+		});
 	}
 	
 }
